{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 192,
  "lineage": "2176820d-0291-8de7-d342-a753cd5210da",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "ecs_alb_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-3/2f7e1e61e4fcecd2",
            "arn_suffix": "app/ecs-alb-3/2f7e1e61e4fcecd2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-3-1649458530.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-3/2f7e1e61e4fcecd2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb-3",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfcd48421c1f6a72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000ff2b816683fbba"
              },
              {
                "subnet_id": "subnet-01e784173e407eef0"
              }
            ],
            "subnets": [
              "subnet-000ff2b816683fbba",
              "subnet-01e784173e407eef0"
            ],
            "vpc_id": "vpc-061260f6e81150f73",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "ecs_alb_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-4/91e65c0a9c4d666e",
            "arn_suffix": "app/ecs-alb-4/91e65c0a9c4d666e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-4-1898847166.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-4/91e65c0a9c4d666e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb-4",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dfcd48421c1f6a72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-000ff2b816683fbba"
              },
              {
                "subnet_id": "subnet-01e784173e407eef0"
              }
            ],
            "subnets": [
              "subnet-000ff2b816683fbba",
              "subnet-01e784173e407eef0"
            ],
            "vpc_id": "vpc-061260f6e81150f73",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "ecs_backend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
            "arn_suffix": "targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-3/2f7e1e61e4fcecd2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-jgbackend2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061260f6e81150f73"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "ecs_frontend_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgfrontend2/b06a9e5918cfa486",
            "arn_suffix": "targetgroup/ecs-jgfrontend2/b06a9e5918cfa486",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgfrontend2/b06a9e5918cfa486",
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-4/91e65c0a9c4d666e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-jgfrontend2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-061260f6e81150f73"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-0dfcd48421c1f6a72",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0dfcd48421c1f6a72",
            "name": "terraform-20250221025322657300000005",
            "tags": {
              "Name": "terraform-event-vpc-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_a1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-0851efb83b6602a1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 250,
            "cidr_block": "10.1.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851efb83b6602a1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Event-vpc-private-subnet-a-1"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_c1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:subnet/subnet-082da239442c8c12e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "available_ip_address_count": 250,
            "cidr_block": "10.1.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082da239442c8c12e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134473022",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Event-vpc-private-subnet-c-1"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc/vpc-04ea2e3f360a8bc9f",
            "cidr_block": "10.2.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-095b3a4235102853e",
                "cidr_block": "10.2.0.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-078af18d24f78f7f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ea2e3f360a8bc9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06b028c29a8e103c9",
            "owner_id": "605134473022",
            "tags": {
              "Name": "Prod-Vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "event_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc/vpc-061260f6e81150f73",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-002ae599239d66dc1",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-078af18d24f78f7f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061260f6e81150f73",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c92da26615ec3ec",
            "owner_id": "605134473022",
            "tags": {
              "Environment": "event",
              "Name": "terraform-junglegym-event-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:vpc/vpc-061260f6e81150f73",
            "cidr_block": "10.1.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-002ae599239d66dc1",
                "cidr_block": "10.1.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-078af18d24f78f7f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061260f6e81150f73",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07c92da26615ec3ec",
            "owner_id": "605134473022",
            "tags": {
              "Environment": "event",
              "Name": "terraform-junglegym-event-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-3/2f7e1e61e4fcecd2/6019c295fef55592",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 0,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-3/2f7e1e61e4fcecd2/6019c295fef55592",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-3/2f7e1e61e4fcecd2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb.ecs_alb_backend",
            "data.aws_lb_target_group.ecs_backend_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-4/91e65c0a9c4d666e/60c40d9987fca001",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:605134473022:certificate/c288ebd8-01dc-4499-bed2-b546120a83bc",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-4/91e65c0a9c4d666e/60c40d9987fca001",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:loadbalancer/app/ecs-alb-4/91e65c0a9c4d666e",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_lb.ecs_alb_frontend",
            "data.aws_lb_target_group.ecs_frontend_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:targetgroup/ecs-jgbackend2/dd66c8d6601b8182",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 0,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener-rule/app/ecs-alb-3/2f7e1e61e4fcecd2/6019c295fef55592/a0b76d845009f625",
            "condition": [],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener-rule/app/ecs-alb-3/2f7e1e61e4fcecd2/6019c295fef55592/a0b76d845009f625",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-3/2f7e1e61e4fcecd2/6019c295fef55592",
            "priority": 99999,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.backend_listener",
            "data.aws_lb.ecs_alb_backend",
            "data.aws_lb_target_group.ecs_backend_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener-rule/app/ecs-alb-4/91e65c0a9c4d666e/60c40d9987fca001/61d9e91dccee54f2",
            "condition": [],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener-rule/app/ecs-alb-4/91e65c0a9c4d666e/60c40d9987fca001/61d9e91dccee54f2",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:605134473022:listener/app/ecs-alb-4/91e65c0a9c4d666e/60c40d9987fca001",
            "priority": 99999,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.frontend_listener",
            "data.aws_lb.ecs_alb_frontend",
            "data.aws_lb_target_group.ecs_frontend_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_to_requester",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00a26154d5b15432e3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00a26154d5b15432e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0afee5f42b18d98a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.event_prod_peering",
            "data.aws_vpc.accepter",
            "data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_to_accepter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09dfa17b940475ecc2377918344",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09dfa17b940475ecc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0afee5f42b18d98a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.event_prod_peering",
            "data.aws_vpc.accepter",
            "data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms_event_to_prod_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:605134473022:security-group/sg-04e1a67df44028014",
            "description": "dms-event-to-prod-replication-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "10.1.2.0/24",
                  "10.1.4.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068e9c06d3af71417"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-04e1a67df44028014",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.2.0/24",
                  "10.1.4.0/24"
                ],
                "description": "From Event VPC DB Subnet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "From PROD VPC DB subnet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068e9c06d3af71417"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "dms-event-to-prod-replication-sg",
            "name_prefix": "",
            "owner_id": "605134473022",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dms-event-to-prod-replication-sg"
            },
            "tags_all": {
              "Name": "dms-event-to-prod-replication-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ea2e3f360a8bc9f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "event_prod_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0afee5f42b18d98a5",
            "peer_owner_id": "605134473022",
            "peer_region": "ap-northeast-2",
            "peer_vpc_id": "vpc-04ea2e3f360a8bc9f",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "event-prod-peering"
            },
            "tags_all": {
              "Name": "event-prod-peering"
            },
            "vpc_id": "vpc-061260f6e81150f73"
          },
          "dependencies": [
            "data.aws_vpc.accepter",
            "data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "accepter_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "id": "pcx-0afee5f42b18d98a5",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_peering_connection_id": "pcx-0afee5f42b18d98a5"
          },
          "dependencies": [
            "aws_route.accepter_to_requester",
            "aws_route.requester_to_accepter",
            "aws_vpc_peering_connection.event_prod_peering",
            "data.aws_vpc.accepter",
            "data.aws_vpc.requester"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "requester_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "id": "pcx-0afee5f42b18d98a5",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_peering_connection_id": "pcx-0afee5f42b18d98a5"
          },
          "dependencies": [
            "aws_route.accepter_to_requester",
            "aws_route.requester_to_accepter",
            "aws_vpc_peering_connection.event_prod_peering",
            "data.aws_vpc.accepter",
            "data.aws_vpc.requester"
          ]
        }
      ]
    }
  ]
}